@@ -31,13 +31,11 @@
 
 void *Seascount(void *argument)
 {
-  int operatorID;
-  int operfunc;
   int gridsize;
   int vdate = 0, vtime = 0;
   int vdate0 = 0, vtime0 = 0;
   int nrecs, nrecords;
-  int gridID, varID, levelID, recID;
+  int varID, levelID, recID;
   int tsID;
   int otsID;
   long nsets;
@@ -45,10 +43,9 @@ void *Seascount(void *argument)
   int year, month, day, seas, seas0 = 0;
   int streamID1, streamID2;
   int vlistID1, vlistID2, taxisID1, taxisID2;
-  int nvars, nlevel;
+  int nwpv; // number of words per value; real:1  complex:2
   int *recVarID, *recLevelID;
   int newseas, oldmon = 0, newmon;
-  double missval;
   field_t **vars1 = NULL;
   field_t field;
   int season_start;
@@ -56,9 +53,6 @@ void *Seascount(void *argument)
   cdoInitialize(argument);
 
   cdoOperatorAdd("seascount", 0, 0, NULL);
-
-  operatorID = cdoOperatorID();
-  operfunc = cdoOperatorF1(operatorID);
 
   season_start = get_season_start();
 
@@ -75,35 +69,17 @@ void *Seascount(void *argument)
 
   streamDefVlist(streamID2, vlistID2);
 
-  nvars    = vlistNvars(vlistID1);
   nrecords = vlistNrecs(vlistID1);
 
   recVarID   = (int *) malloc(nrecords*sizeof(int));
   recLevelID = (int *) malloc(nrecords*sizeof(int));
 
   gridsize = vlistGridsizeMax(vlistID1);
+  if ( vlistNumber(vlistID1) != CDI_REAL ) gridsize *= 2;
 
   field.ptr = (double *) malloc(gridsize*sizeof(double));
 
-  vars1 = (field_t **) malloc(nvars*sizeof(field_t *));
-
-  for ( varID = 0; varID < nvars; varID++ )
-    {
-      gridID   = vlistInqVarGrid(vlistID1, varID);
-      gridsize = gridInqSize(gridID);
-      nlevel   = zaxisInqSize(vlistInqVarZaxis(vlistID1, varID));
-      missval  = vlistInqVarMissval(vlistID1, varID);
-
-      vars1[varID] = (field_t *)  malloc(nlevel*sizeof(field_t));
-
-      for ( levelID = 0; levelID < nlevel; levelID++ )
-        {
-          vars1[varID][levelID].grid    = gridID;
-          vars1[varID][levelID].nmiss   = 0;
-          vars1[varID][levelID].missval = missval;
-          vars1[varID][levelID].ptr     = (double *) malloc(gridsize*sizeof(double));
-        }
-    }
+  vars1 = field_malloc(vlistID1, FIELD_PTR);
 
   tsID    = 0;
   otsID   = 0;
@@ -163,11 +139,12 @@ void *Seascount(void *argument)
                   recLevelID[recID] = levelID;
                 }
 
+	      nwpv     = vars1[varID][levelID].nwpv;
               gridsize = gridInqSize(vlistInqVarGrid(vlistID1, varID));
 
               if ( nsets == 0 )
                 {
-                  for ( i = 0; i < gridsize; i++ )
+                  for ( i = 0; i < nwpv*gridsize; i++ )
                     vars1[varID][levelID].ptr[i] = vars1[varID][levelID].missval;
 		  vars1[varID][levelID].nmiss = gridsize;
                 }
@@ -206,18 +183,7 @@ void *Seascount(void *argument)
       otsID++;
     }
 
-  for ( varID = 0; varID < nvars; varID++ )
-    {
-      nlevel = zaxisInqSize(vlistInqVarZaxis(vlistID1, varID));
-      for ( levelID = 0; levelID < nlevel; levelID++ )
-        {
-          free(vars1[varID][levelID].ptr);
-        }
-
-      free(vars1[varID]);
-    }
-
-  free(vars1);
+  field_free(vars1, vlistID1);
 
   if ( field.ptr ) free(field.ptr);
 
